# distributed-wasm-rt-demo

./: Cargo.toml  Dockerfile  Makefile  README.md  out.ppm  test.ppm
api/: Cargo.toml
api/src/: lib.rs
clumsy-rt/: Cargo.toml  README.md
clumsy-rt/src/: camera.rs  lib.rs  main.rs  output.rs  reflection.rs  render_job.rs  sample_scenes.rs  scene.rs  texture.rs  web_api.rs
ntmy/: Cargo.toml
ntmy/src/: lib.rs
spin-component/: Cargo.toml  README.md  spin.toml
spin-component/res/: spin_component.wasm
spin-component/src/: lib.rs
src/: camera.rs  lib.rs  main.rs  output.rs  pixel.rs  reflection.rs  sample_scenes.rs  scene.rs  texture.rs
web-view/: Cargo.toml  README.md
web-view/src/: bottom_tabs.rs  images.rs  lib.rs  network.rs  p2p_proto.rs  palette.rs  peer_proxy.rs  progress.rs  render.rs  render_settings.rs  ui_slider.rs  webrtc_signaling.rs  worker.rs  worker_node.rs  worker_view.rs  workers_view.rs  ws.rs
web-view/www/: clumsy_rt.js  clumsy_rt_bg.wasm  index.html  index.js  package-lock.json  package.json  styles.css  webpack.common.js  worker.js
web-view/www/assets/: LICENSE.md
webrtc-signaling-server/: Cargo.toml
webrtc-signaling-server/src/: main.rs
