[package]
edition = "2021"
name = "web-view"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
paddle = {rev = "b8f396488edabce2713095e4ea6640e21be29a5b", git = "https://github.com/jakmeier/paddle.git"}

ntmy = {path = "../ntmy"}

bendy = {version = "0.3.3", features = ["std", "serde"]}
chrono = "*"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

api = {path = "../api"}

[dependencies.web-sys]
features = [
  "console",
  "BinaryType",
  "Crypto",
  "Document",
  "ErrorEvent",
  "MessageEvent",
  "RtcConfiguration",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcIceCandidate",
  "RtcIceGatheringState",
  "RtcPeerConnection",
  "RtcPeerConnectionIceEvent",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcSignalingState",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcConfiguration",
  "WebSocket",
  "Window",
  "Worker",
]
version = "0.3"
