[package]
edition = "2021"
name = "web-view"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
paddle = {rev = "0a7efb37373e596184248eee66c27982d8ae10f5", git = "https://github.com/jakmeier/paddle.git"}

ntmy = {path = "../ntmy"}

bendy = {version = "0.3.3", features = ["std", "serde"]}
chrono = "0.4.30"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = {version = "1", features = ["derive"]}

api = {path = "../api"}

[dependencies.web-sys]
features = [
  "console",
  "BinaryType",
  "CanvasRenderingContext2d",
  "Crypto",
  "Document",
  "ErrorEvent",
  "MessageEvent",
  "RtcConfiguration",
  "RtcDataChannel",
  "RtcDataChannelType",
  "RtcDataChannelEvent",
  "RtcIceCandidate",
  "RtcIceGatheringState",
  "RtcPeerConnection",
  "RtcPeerConnectionIceEvent",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcSignalingState",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcConfiguration",
  "WebSocket",
  "Window",
  "Worker",
]
version = "0.3"
